prometheus/5-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus-service
    namespace: monitoring
    annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
spec:
    type: LoadBalancer
    selector:
        app: prometheus-server
    ports:
        - port: 9090
          targetPort: 9090
    externalIPs:
        -  # your external IP
